[tool.poetry]
name = "call-tools-test-case"
version = "0.1.0"
description = ""
authors = ["Ivan Shevchenko <iwshevcheko@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
loguru = "^0.7.2"
pydub = "^0.25.1"
ffmpeg = "^1.4"
ruff = "^0.6.1"
vosk = "^0.3.45"
wave = "^0.0.2"

[tool.ruff]
line-length = 79
extend-exclude = ["hooks/"]

[tool.ruff.lint]
ignore = ["B008"]
select = ["A", "B", "C", "E", "F", "I", "Q", "ASYNC", "N", "W", "UP", "T20", "SIM", "ANN204"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"] # unused imports
"models.py" = ["N805", "A003"] # cls instead self, id for modles
"schemas.py" = ["N805", "A003"] # cls instead self, id for modles
"mixins.py" = ["N805", "A003"] # cls instead self, id for modles
"requests.py" = ["N805", "A003"] # cls instead self, id for modles

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"